# telegram-notify-in-bot

./: .gitignore  README.md  main.py  pyproject.toml  text.txt  users.txt
.envs/: .env.example
src/: config.py  exceptions.py  http.py  notify.py
