[tool.poetry]
name = "tg-bot-notify"
version = "0.1.0"
description = ""
authors = ["kanewi11 <https://github.com/kanewi11>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
